# tell-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  README.md  RELEASE.md  TESTING.md  clippy.toml  deny.toml  justfile
.github/workflows/: ci.yml
crates/tell/: Cargo.toml
crates/tell-bench/: Cargo.toml
crates/tell-bench/benches/: comparison.rs  encoding.rs  hot_path.rs  pipeline.rs
crates/tell-bench/examples/: e2e_comparison.rs  http_latency.rs  measure_wire.rs  throughput.rs
crates/tell-bench/src/: lib.rs
crates/tell-encoding/: Cargo.toml
crates/tell-encoding/src/: batch.rs  batch_test.rs  event.rs  event_test.rs  helpers.rs  lib.rs  log.rs  log_test.rs  metric.rs  metric_test.rs
crates/tell/examples/: config.rs  e2e.rs  events.rs  logging.rs
crates/tell/src/: buffer.rs  buffer_test.rs  client.rs  client_test.rs  config.rs  config_test.rs  constants.rs  error.rs  lib.rs  props.rs  transport.rs  transport_test.rs  types.rs  validation.rs  validation_test.rs  worker.rs
crates/tell/src/session_test/: default_and_identity.rs  mod.rs  override_and_reset.rs
crates/tell/tests/: e2e.rs  integration.rs  session_opt_in.rs
examples/: basic.rs  logging.rs
scripts/: setup-compare.sh
