[package]
name = "tell-bench"
description = "Benchmark suite for the Tell Rust SDK"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tell = { path = "../tell" }
tell-encoding = { path = "../tell-encoding" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
flashlog = { path = "../../compare/flashlog", features = ["max-level-trace"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
tempfile = "3"

[[example]]
name = "e2e_comparison"
required-features = ["flashlog"]

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "hot_path"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "comparison"
harness = false
required-features = ["flashlog"]
